<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2020  David Osemwota
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Super D</string>
    <string name="str_default_filename">Filename.txt</string>

    <string name="str_btn_add_queue">Queue</string>
    <string name="str_edit_geturl_hint">Paste download link here</string>
    <string name="btn_pause_str">PAUSE</string>
    <string name="str_resume_btn">Resume</string>
    <string name="image_btn_description">click to play or pause</string>
    <string name="str_imbtn_description">delete icon</string>
    <string name="str_txtvw_delete">delete</string>
    <string name="db_error_msg">Error retrieving data from database</string>
    <string name="download_url">Enter a download url ..</string>
    <string name="overflow" translatable="false" >⋮</string>
    <string name="copy_url_menu">Copy URL</string>
    <string name="delete">Delete</string>
    <string name="url_copied">"URL copied !"</string>
    <string name="deleted">Deleted !</string>
    <string name="fab_label">Add download URL</string>
    <string name="overflow_menu">download item overflow menu</string>
    <string name="settings_menu">Settings</string>
    <string name="settings_frag_title">Settings</string>
    <string name="download_rview_label">List of downloaded items</string>
    <string name="select_theme">Select Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="system_default">System Default</string>
    <string name="set_btn">Set</string>
    <string name="theme">Theme</string>
    <string name="circleview_icon_description">Icon for circleView</string>

    <!--    AboutFragment-->
    <string name="setting_about">About</string>
    <string name="setting_about_sub_title">Team and Libraries</string>
    <string name="developer_name" translatable="false" >David O.</string>
    <string name="developer">Android Mechanic</string>
    <string name="team">Team</string>
    <string name="libraries_used">Libraries / Plugins</string>
    <string name="android_jetpack">Android Jetpack / Support</string>
    <string name="android_jetpack_sub_title">Paging, ViewModels e.t.c</string>
    <string name="kotlin">Kotlin</string>
    <string name="kotlin_item_sub_title">Kotlin plugin, extensions e.t.c</string>
    <string name="fetch_lib">Fetch2</string>
    <string name="mockito">Mockito</string>
    <string name="mockito_sub_title">Mock testing</string>
    <string name="timber">Timber</string>
    <string name="hamcrest">Hamcrest</string>
    <string name="icons">Icons</string>
    <string name="fetch_item_sub_title">3rd party android download manager library</string>
    <string name="version_item_title">Version</string>

    <!--    download item-->
    <string name="_new" translatable="false" >\u22EE</string>
    <!--    URL-->
    <string name="developer_url">https://www.github.com/david-oh-git</string>
    <string name="freepik_url" translatable="false">https://www.flaticon.com/authors/freepik</string>
    <string name="catalin_url" translatable="false">https://www.flaticon.com/authors/catalin-fertu</string>
    <string name="alfredo_url" translatable="false">https://www.flaticon.com/authors/alfredo-hernandez</string>
    <string name="kotlin_url" translatable="false">https://www.kotlinlang.org</string>
    <string name="jetpack_url" translatable="false">https://developer.android.com/jetpack</string>
    <string name="fetch_url" translatable="false">https://www.github.com/tonyofrancis/Fetch</string>
    <string name="mockito_url" translatable="false">https://site.mockito.org</string>
    <string name="timber_url" translatable="false">https://www.github.com/JakeWharton/timber</string>
    <string name="hamcrest_url" translatable="false">https://www.hamcrest.org</string>

<!--    set theme strings-->
    <string name="dark_theme_set" translatable="false">dark</string>
    <string name="light_theme_set" translatable="false">light</string>
    <string name="default_theme_set" translatable="false">default</string>
    <string name="loading_url">Loading url ....</string>
    <string name="loading_url_description">displays loading url when application is doing so</string>
    <string name="select_bitrate">Select bitrate</string>
    <string name="list_view_description">Displays a list of available bitrate horizontally</string>
</resources>
