<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2020  David Osemwota
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="version_name" type="String" />

        <variable
            name="openWebPage"
            type="kotlin.jvm.functions.Function1" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".about.AboutFragment">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/team_sub_title"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/team"
                android:textAllCaps="true"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/developer_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <io.audioshinigami.superd.customviews.SettingsItem
                android:id="@+id/developer_item"
                app:layout_constraintTop_toBottomOf="@id/team_sub_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:setting_title="@string/developer_name"
                app:setting_sub_title="@string/developer"
                app:setting_image="@drawable/ic_user"
                app:setting_image_color="@color/developer_item"
                android:onClick="@{ () -> openWebPage.invoke( @string/developer_url ) }"
                android:layout_marginTop="4dp"
                android:layout_width="0dp"
                android:layout_height="@dimen/about_item_height"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/icons_sub_title"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:text="@string/icons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/developer_item"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <io.audioshinigami.superd.customviews.SettingsItem
                android:id="@+id/download_icon_item"
                app:layout_constraintTop_toBottomOf="@id/alfredo_icon_item"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:setting_title="Catalin Fertu"
                android:onClick="@{ () -> openWebPage.invoke( @string/catalin_url ) }"
                app:setting_sub_title="icon via flaticon.com"
                android:layout_marginTop="4dp"
                android:layout_width="0dp"
                android:layout_height="@dimen/about_item_height"/>

            <io.audioshinigami.superd.customviews.SettingsItem
                android:id="@+id/alfredo_icon_item"
                app:layout_constraintTop_toBottomOf="@id/icons_sub_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:setting_title="Alfredo Hernandez"
                app:setting_sub_title="App icon via flaticon.com"
                app:setting_image="@drawable/ic_download"
                android:onClick="@{ () -> openWebPage.invoke( @string/alfredo_url ) }"
                android:layout_marginTop="4dp"
                android:layout_width="0dp"
                android:layout_height="@dimen/about_item_height"/>

            <io.audioshinigami.superd.customviews.SettingsItem
                android:id="@+id/freepik_icon_item"
                app:layout_constraintTop_toBottomOf="@id/download_icon_item"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:setting_title="FreePik"
                app:setting_sub_title="icon via flaticon.com"
                app:setting_image_color="@android:color/transparent"
                android:onClick="@{ () -> openWebPage.invoke( @string/freepik_url ) }"
                android:layout_marginTop="4dp"
                android:layout_width="0dp"
                android:layout_height="@dimen/about_item_height"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/libraries_sub_title"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:text="@string/libraries_used"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/freepik_icon_item"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <io.audioshinigami.superd.customviews.SettingsItem
                android:id="@+id/jetpack_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/libraries_sub_title"
                app:setting_title="@string/android_jetpack"
                app:setting_sub_title="@string/android_jetpack_sub_title"
                app:setting_image_color="@android:color/transparent"
                android:onClick="@{ () -> openWebPage.invoke( @string/jetpack_url ) }"
                android:layout_marginTop="4dp"
                android:layout_width="0dp"
                android:layout_height="@dimen/about_item_height" />

            <io.audioshinigami.superd.customviews.SettingsItem
                android:id="@+id/kotlin_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jetpack_item"
                app:setting_title="@string/kotlin"
                app:setting_sub_title="@string/kotlin_item_sub_title"
                app:setting_image_color="@android:color/transparent"
                android:onClick="@{ () -> openWebPage.invoke( @string/kotlin_url ) }"
                android:layout_marginTop="4dp"
                android:layout_width="0dp"
                android:layout_height="@dimen/about_item_height" />

            <io.audioshinigami.superd.customviews.SettingsItem
                android:id="@+id/fetch2_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kotlin_item"
                app:setting_title="@string/fetch_lib"
                app:setting_sub_title="@string/fetch_item_sub_title"
                app:setting_image_color="@android:color/transparent"
                android:onClick="@{ () -> openWebPage.invoke( @string/fetch_url ) }"
                android:layout_marginTop="4dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <io.audioshinigami.superd.customviews.SettingsItem
                android:id="@+id/mockito_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fetch2_item"
                app:setting_title="@string/mockito"
                app:setting_sub_title="@string/mockito_sub_title"
                app:setting_image_color="@android:color/transparent"
                android:onClick="@{ () -> openWebPage.invoke( @string/mockito_url ) }"
                android:layout_marginTop="4dp"
                android:layout_width="0dp"
                android:layout_height="@dimen/about_item_height" />

            <io.audioshinigami.superd.customviews.SettingsItem
                android:id="@+id/timber_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mockito_item"
                app:setting_title="@string/timber"
                app:setting_image_color="@android:color/transparent"
                android:onClick="@{ () -> openWebPage.invoke( @string/timber_url ) }"
                android:layout_marginTop="4dp"
                android:layout_width="0dp"
                android:layout_height="@dimen/about_item_height"/>

            <io.audioshinigami.superd.customviews.SettingsItem
                android:id="@+id/hamcrest_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timber_item"
                app:setting_title="@string/hamcrest"
                app:setting_image_color="@android:color/transparent"
                android:onClick="@{ () -> openWebPage.invoke( @string/hamcrest_url ) }"
                android:layout_marginTop="4dp"
                android:layout_width="0dp"
                android:layout_height="@dimen/about_item_height" />

            <io.audioshinigami.superd.customviews.SettingsItem
                android:id="@+id/version_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hamcrest_item"
                app:setting_title="@string/version_item_title"
                app:setting_sub_title="@{ version_name }"
                android:layout_marginTop="4dp"
                android:layout_width="0dp"
                android:layout_height="@dimen/about_item_height" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</layout>


