<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="io.audioshinigami.superd.selecttheme.ThemeBottomSheetViewModel" />

    </data>

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:background="@color/background_color"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:text="@string/select_theme"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/general_txt"
            android:paddingBottom="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="8dp"
            android:layout_marginStart="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/theme_radio_group"
            android:paddingTop="4dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/theme_dark"
                android:onClick="@{ (v) -> viewModel.radioButtonAction( 2 ) }"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/dark"/>

            <RadioButton
                android:id="@+id/theme_light"
                android:onClick="@{ (v) -> viewModel.radioButtonAction( 1 ) }"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/light"/>

            <RadioButton
                android:id="@+id/theme_system_default"
                android:onClick="@{ (v) -> viewModel.radioButtonAction( -1 ) }"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/system_default"/>

        </RadioGroup>

        <TextView
            android:text="@string/set_btn"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{ () -> viewModel.setTheme() }"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textColor="@color/theme_set_btn"
            android:layout_margin="12dp"
            android:layout_gravity="end"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>

</layout>
