<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>
        <import type="androidx.core.content.ContextCompat"/>

        <variable
            name="itemAction"
            type="io.audioshinigami.superd.addownload.DownloadItemActions" />

        <variable
                name="fileData"
                type="io.audioshinigami.superd.data.source.db.entity.FileData" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:layout_marginBottom="0dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="8dp" >

        <RelativeLayout
            android:id="@+id/id_view_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/id_img_btn_delete"
                android:layout_width="@dimen/dimen_imgbtn"
                android:layout_height="@dimen/dimen_imgbtn"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/str_imbtn_description"
                app:srcCompat="@drawable/ic_delete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@id/id_img_btn_delete"
                android:text="@string/str_txtvw_delete"
                android:textColor="@color/md_black_1000"
                android:textSize="@dimen/dimen_txtvw_txtsize"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/id_view_forground"
            android:paddingBottom="0dp"
            android:layout_marginBottom="-5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_purple_400">

            <ImageButton
                android:id="@+id/id_play_pause"
                app:srcCompat="@drawable/ic_pause"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/circular_button"
                android:contentDescription="@string/image_btn_description"
                android:onClick="@{ () -> itemAction.downloadButtonAction( fileData.request_id, fileData.url )}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/id_dwloadprogressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="@integer/progressbar_maxValue"
                android:progress= "@{ fileData.progressValue }"
                android:layout_marginBottom="0dp"
                android:paddingBottom="0dp"
                app:layout_constraintBottom_toBottomOf="@id/id_view_forground"
                app:layout_constraintEnd_toEndOf="@id/id_view_forground"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/id_view_forground" />

            <TextView
                android:id="@+id/id_filename"
                android:fontFamily="@font/pt_sans_bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@{ fileData.fileName }"
                android:textAlignment="textStart"
                android:textSize="@dimen/filename_text_size"
                app:layout_constraintEnd_toStartOf="@+id/overflow_icon"
                app:layout_constraintStart_toEndOf="@+id/id_play_pause"
                app:layout_constraintTop_toTopOf="@+id/id_play_pause" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/overflow_icon"
                android:background="@drawable/circular_button"
                app:srcCompat="@drawable/ic_overflow"
                android:onClick="@{ (view) -> itemAction.showPopup( view ,fileData.url) }"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/item_overflow"
                app:layout_constraintBottom_toTopOf="@id/id_dwloadprogressbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/id_filename" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>

